--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div fxLayout="row">
+    <div class="users-modules" fxFlex="50%" fxLayout="column" fxLayoutGap="20px">
+        <button mat-raised-button color="primary" (click)="toTable()" fxFlexAlign="center">User Table</button>
+        <router-outlet></router-outlet>
+    </div>
+    <div class="users-modules" fxFlex="50%" fxLayout="column" fxLayoutGap="20px">
+        <button mat-raised-button color="primary" (click)="toForm()" fxFlexAlign="center">Add User</button>
+        <router-outlet name="form"></router-outlet>
+    </div>
+</div>
