--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div fxLayout="row">
     <div class="users-modules" fxFlex="50%" fxLayout="column" fxLayoutGap="20px">
         <button mat-raised-button color="primary" (click)="toTable()" fxFlexAlign="center">User Table</button>
@@ -8,3 +9,6 @@
         <router-outlet name="form"></router-outlet>
     </div>
 </div>
+
+<button [tooltip]="'With s!'" s>Do Something</button>
+
