--- a/src/app/components/user-table/user-table.component.css
+++ b/src/app/components/user-table/user-table.component.css
@@ -1,7 +1,51 @@
 table {
     width: 100%;
+    table-layout: fixed;
+}
+th{
+    box-sizing: border-box;
+    overflow: hidden;
+    min-width: 50px;
+    height: inherit;
+}
+td{
+    box-sizing: border-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    min-width: 50px;
 }
 .title{
     text-align: center;
     margin-bottom: 50px;
+}
+.asd{
+    margin-top: 50px;
+    padding-left: 10px;
+    width: 100px;
+    background-color: bisque;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.w{
+    height: 100%;
+    position: relative;
+}
+.limit{
+    position: absolute;
+    height: 100%;
+    right: 0;
+    top: 0;
+    z-index: 20;
+    opacity: 0;
+    cursor: col-resize;
+    width: 2px;
+    padding: 0 5px;
+    border-right: 2px solid silver;
+    align-self: stretch;
+    transition: opacity .3s;
+}
+
+th:hover .limit{
+    opacity: 1;
 }
