--- a/src/app/components/user-table/user-table.component.html
+++ b/src/app/components/user-table/user-table.component.html
@@ -1,13 +1,24 @@
 <h2 class="title">Список користувачів</h2>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">  
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" appStretchTable matSort>  
     
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef=""> Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.name}} </td>
+        <th mat-header-cell *matHeaderCellDef="" > 
+            <ng-container *stretchSortCell="'Name'"></ng-container>
+        </th>
+        <td mat-cell *matCellDef="let user">{{user.name}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="statuss">
+        <th mat-header-cell *matHeaderCellDef > 
+            <ng-container *stretchSortCell="'Status'"></ng-container>
+        </th>
+        <td mat-cell *matCellDef="let user"> {{user.status}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef=""> Status </th>
+        <th mat-header-cell *matHeaderCellDef> 
+            <ng-container *stretchSortCell="'Status'"></ng-container>
+        </th>
         <td mat-cell *matCellDef="let user"> {{user.status}} </td>
     </ng-container>
 
@@ -25,5 +36,3 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: displayedColumns"></tr>
 </table>
-  
-  
