--- a/src/app/components/user-table/user-table.component.html
+++ b/src/app/components/user-table/user-table.component.html
@@ -2,22 +2,22 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" appStretchTable matSort>  
     
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef="" > 
-            <ng-container *stretchSortCell="'Name'"></ng-container>
+        <th mat-header-cell *matHeaderCellDef="" id="qw" mat-sort-header=""> 
+            Name
         </th>
         <td mat-cell *matCellDef="let user">{{user.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="statuss">
-        <th mat-header-cell *matHeaderCellDef > 
-            <ng-container *stretchSortCell="'Status'"></ng-container>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> 
+            Status
         </th>
         <td mat-cell *matCellDef="let user"> {{user.status}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> 
-            <ng-container *stretchSortCell="'Status'"></ng-container>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> 
+            Status
         </th>
         <td mat-cell *matCellDef="let user"> {{user.status}} </td>
     </ng-container>
